# demo_rust_elm

./: .gitignore  Cargo.toml  arch.wsd  data_flow.wsd  index.html  lk.md
elm/: elm.js
elm/elm-stuff/0.19.1/: Main.elmi  Main.elmo
elm/src/: Main.elm
pkg/: demo_rust_elm.d.ts  demo_rust_elm.js  demo_rust_elm_bg.wasm  demo_rust_elm_bg.wasm.d.ts  package.json
src/: lib.rs
