[package]
name = "demo_rust_elm"
version = "0.1.0"
authors = ["jsrmalvarez <jsrmalvarez@ninjatic.engineer>"]
description = "Rust and elm sample project"
license = "MIT/Apache-2.0"
repository = "https://github.com/jsrmalvarez/demo_rust_elm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

